--- a/cro-chain-desktop-bin/PKGBUILD
+++ b/cro-chain-desktop-bin/PKGBUILD
@@ -5,18 +5,18 @@
 
 _pkgbin=chain-desktop-wallet
 _pkgname=cro-chain-desktop
-pkgname=${_pkgname}-bin
+pkgname="${_pkgname}-bin"
 pkgdesc='Crypto.com DeFi Desktop Wallet'
 license=('Apache')
 url='https://github.com/crypto-com/chain-desktop-wallet'
-pkgver=1.4.3
+pkgver=1.4.5
 pkgrel=1
 arch=('x86_64')
 provides=("${_pkgname}")
 conflicts=("${_pkgname}")
 _appimg="Crypto.com-DeFi-Desktop-Wallet-${pkgver}.AppImage"
 source=("${_appimg}::${url}/releases/download/v${pkgver}/${_appimg}")
-sha512sums=('bde818679324e974476061825cee48603da9c0bde59c0863c68526feec36d26cd765056a5cbd77c2f5c6d5136ce2deec0ea95b8707397cc7fc24fb8eb3fafeb0')
+sha512sums=('4eadc79c6676505105e775991cea0873c81d10b8b3055727a20e25650a4da79b3ef2b8fd42e351d08cc99b3e063c44af2075b5ff72e2039e638dc6967f3aa758')
 
 prepare() {
   # Extract files
