--- a/solidity-bin/PKGBUILD
+++ b/solidity-bin/PKGBUILD
@@ -5,16 +5,17 @@
 
 _pkgname=solidity
 pkgname="${_pkgname}-bin"
-pkgver=0.8.22
+pkgver=0.8.23
 pkgrel=1
 pkgdesc='Contract-Oriented Programming Language'
 arch=('x86_64')
 url='https://github.com/ethereum/solidity'
 license=('GPL3')
+depends=('glibc')
 provides=("${_pkgname}")
 conflicts=("${_pkgname}")
 source=("${_pkgname}-${pkgver}.bin::${url}/releases/download/v${pkgver}/solc-static-linux")
-sha512sums=('6b28b50c61c4b8f8ee138fef27aca58a8243f5db08cad048865eb231204490d3aeda74900af4757da90824c829387d3d5510fdfbfd2b48d39b144fd8ec284818')
+sha512sums=('3ad922bb1523dee858de1785290b262048b2229a48842499ac431c0f50a40a74005dca276978537ccf2e948a57fc882938d36277495ffb3fe207e2063fc3cb4b')
 
 package() {
   install -Dm755 "${_pkgname}-${pkgver}.bin" "${pkgdir}/usr/bin/solc"
