upg(ledger-live): 2.79.0-1

--- a/ledger-live/PKGBUILD
+++ b/ledger-live/PKGBUILD
@@ -8,9 +8,9 @@ _appname=ledger-live-desktop
 pkgname=ledger-live
 pkgdesc="Maintain your Ledger devices"
 _electron='electron28'
-_sha='264cacbc63746106284fe2545d7e149a6064a14a'
+_sha='6d0998607064658ed9968c1c94036617ce8f1a9e'
 _short_sha="${_sha::7}"
-pkgver=2.77.2
+pkgver=2.79.0
 pkgrel=1
 arch=('x86_64')
 _gh_owner='LedgerHQ'
@@ -18,17 +18,16 @@ _gh_repo='ledger-live'
 url="https://github.com/${_gh_owner}/${_gh_repo}"
 license=('MIT')
 depends=('ledger-udev' "${_electron}")
-makedepends=('node-gyp' 'fnm' 'pnpm')
+makedepends=('node-gyp' 'pnpm' 'nvm')
 source=("${pkgname}-${pkgver}-${_short_sha}.tar.gz::https://api.github.com/repos/${_gh_owner}/${_gh_repo}/tarball/${_sha}"
         "${_appname}.sh")
-sha512sums=('44e604266ca509e44db58a1cd22ef8bb88b41186da0d2b8c99109e4c157be8fb420bcfbf736b0416316286f728646a8e90619f2abde1543ab26d50fbc4d8e2fd'
+sha512sums=('caeea4ef98a3a2f005ae24cf728ee34c6a682e8cb4cc0a4399bf4cc3ce07dd742d85cf2aaa1877bafad080a9f221a6e5e6bcd7d491d5dfdc56417574066f5046'
             '70effe952d7007e79e43523f5e8d868228eedb5049465c2ebea017f9c8b0b25f82e0c6f56cef59e40479d29149969cde8e7098edf8a0cad7b23a9a123e5f0755')
 
-_fnm_use() {
-  export FNM_DIR="${srcdir}/.fnm"
-  eval "$(fnm env --shell bash)"
-  version="$(awk -F "=" '/node/ {print $2}' .prototools | xargs)"
-  fnm use "${version}" --install-if-missing
+_nvm_install() {
+  export NVM_DIR="${srcdir}/.nvm"
+  source /usr/share/nvm/init-nvm.sh || [[ $? != 1 ]]
+  nvm install "$(awk -F "=" '/node/ {print $2}' .prototools | xargs)"
 }
 
 prepare() {
@@ -38,7 +37,7 @@ prepare() {
 build() {
   cd "${_gh_owner}-${_gh_repo}-${_short_sha}"
 
-  _fnm_use
+  _nvm_install
 
   export GIT_REVISION="${pkgver}"
   pnpm i --filter="${_appname}..." --filter="ledger-live" --frozen-lockfile --unsafe-perm
