--- a/rustrover-eap/PKGBUILD
+++ b/rustrover-eap/PKGBUILD
@@ -6,16 +6,16 @@
 pkgbase=rustrover-eap
 pkgname=("${pkgbase}" "${pkgbase}-jre")
 pkgver=241.15989.101
-pkgrel=1
-pkgdesc="Rust IDE by JetBrains (EAP)"
+pkgrel=2
+pkgdesc="JetBrains IDE for Rust Developers (EAP)"
 arch=('x86_64' 'aarch64')
 options=('!strip')
 url="https://www.jetbrains.com/rust/"
 license=('custom:jetbrains')
-source=("${pkgbase}.desktop" 'LICENSE')
+source=("jetbrains-${pkgbase}.desktop" 'LICENSE')
 source_x86_64=("${pkgbase}-${pkgver}-${arch[0]}.tar.gz::https://download-cdn.jetbrains.com/rustrover/RustRover-${pkgver}.tar.gz")
 source_aarch64=("${pkgbase}-${pkgver}-${arch[1]}.tar.gz::https://download-cdn.jetbrains.com/rustrover/RustRover-${pkgver}-${arch[1]}.tar.gz")
-sha256sums=('87a122544f85c7334a23e0b5051b09d03d975f93f151e735cd65bdeef5093bc1'
+sha256sums=('5f20e23e39d7fa8ef47945fad845c9918ec77c9d6b94f8f31b7286c1a656eb7f'
             'db26ca1fd026fbacfeb87f4bad42d78b3512bb733ce1c566bdd5b751e77d7bb3')
 sha256sums_x86_64=('10a904c833990c4621f919a36d31744dd1700dce42ff3addbc909937b6f6329d')
 sha256sums_aarch64=('6ee90aee367cd9ecc8db99020133e17299113c1e016b3344a4762eb8b954317a')
@@ -33,7 +33,7 @@ package_rustrover-eap() {
   install -dm 755 "${pkgdir}/usr/bin"
   ln -s "/opt/${pkgbase}/bin/rustrover.sh" "${pkgdir}/usr/bin/${pkgbase}"
 
-  install -Dm 644 "${pkgbase}.desktop" -t "${pkgdir}/usr/share/applications"
+  install -Dm 644 jetbrains-${pkgbase}.desktop -t "${pkgdir}/usr/share/applications"
   install -Dm 644 LICENSE -t "${pkgdir}/usr/share/licenses/${pkgbase}"
 
   install -dm 755 "${pkgdir}/usr/share/pixmaps"
@@ -44,7 +44,7 @@ package_rustrover-eap() {
 
 package_rustrover-eap-jre() {
   license=('GPL2')
-  pkgdesc='JBR (JetBrains Runtime) for RustRover EAP- a patched JRE'
+  pkgdesc='JBR (JetBrains Runtime) for RustRover EAP - a patched JRE'
   url='https://github.com/JetBrains/JetBrainsRuntime'
 
   install -dm 755 "${pkgdir}/opt/${pkgbase}"
